<resources>
    <string name="click_here">Click Here</string>
    <string name="register_your_house">Register your House</string>
    <string name="already_have_a_house_key">Already have a house key?</string>
    <string name="find_your_house">Find your house</string>
    <string name="step_1_of_2_generate_house_key">Step 1 of 2 : Generate House Key</string>
    <string name="step_2_of_2_add_bhaiyas">Step 2 of 2 : Add Bhaiyas</string>
    <string name="register">Register</string>
    <string name="don_t_have_a_house_key">Don’t have a house key?</string>
    <string name="enter_a_unique_house_key">Enter a unique house key</string>
    <string name="enter_your_house_key">Enter your house key</string>
    <string name="generate">Generate</string>
    <string name="find">Find</string>
    <string name="bhaiya_number">Bhaiya %s</string>
    <string name="add_a_bhaiya">Add a Bhaiya</string>
    <string name="failed">Failed</string>
    <string name="what_do_you_do">What do you do</string>
    <string name="proceed">Proceed</string>
    <string name="choose_who_you_are_to_set_food_plan">Choose who you are to set food plan</string>
    <string name="string_continue">Continue</string>
    <string name="who_are_you">Who are you?</string>
    <string name="add_new">+ Add New</string>
    <string name="add_bhaiya">Add Bhaiya</string>
    <string name="add">Add</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="please_cook_these_dishes_for_dinner_tonight">Please cook these dishes for dinner tonight</string>
    <string name="who_do_you_want_to_call">Who do you want to call?</string>
    <string name="you_ll_get_to_eat_these_dishes_tonight">You’ll get to eat these dishes tonight</string>
    <string name="you_all_get_to_eat_these_dishes_tonight">You all will have to eat these dishes tonight</string>
    <string name="change_plan">Change plan</string>
    <string name="change_plan_for">Change plan for %s</string>
    <string name="files_permission_message">Please provide permission to access files</string>
    <string name="new_house_key">House key not found</string>
    <string name="house_key_already_exists">House key already exists</string>
    <string name="login_now">Login Now</string>
    <string name="generate_now">Generate Now</string>
    <string name="please_enter_more_then">Please enter more then 3 letters</string>
    <string name="call_permission_message">Please provide permission to call</string>
    <string name="add_a_dish">Add a dish</string>
    <string name="add_dish">Add Dish</string>
    <string name="request_a_new_dish">Request a new dish</string>
    <string name="call_bhaiya_log">Call bhaiya log</string>
    <string name="string_save">Save</string>
    <string name="you_ll_get_to_eat_these_dishes">You’ll get to eat these dishes on %s night</string>
    <string name="you_all_get_to_eat_these_dishes">You all will have to eat these dishes on %s night</string>
    <string name="your_house_has_got_no_n_one_but_ghosts">Your house has got no \n one but ghosts!</string>
    <string name="add_your_details">Add your details</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_flatmate">Add Flatmate</string>
    <string name="name">Name</string>
    <string name="empty_dish_list">No dishes for %s\nAdd dishes to the plan</string>
    <string name="aunty_empty_dish_list">No dishes to cook for %s</string>
    <string name="please_cook_these_dishes_on">Please cook these dishes on %s night</string>
    <string name="i_cook">I cook</string>
    <string name="i_eat">I eat</string>
</resources>
