<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            app:srcCompat="@drawable/ic_left_arrows" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/yesterday"
            android:textColor="@color/textSubHeading"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_1"
            android:layout_weight="3"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/today"
            android:textColor="@color/textHeading"
            android:textSize="@dimen/sp_25" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/tomorrow"
            android:textColor="@color/textSubHeading"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            app:srcCompat="@drawable/ic_right_arrows" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:text="@string/you_ll_get_to_eat_these_dishes_tonight"
        android:textColor="@color/textSubHeading" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never"
        android:paddingStart="24dp"
        android:paddingLeft="24dp"
        android:paddingEnd="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="3"
        tools:listitem="@layout/item_home_dish" />

    <include layout="@layout/layout_bottom_button" />


</LinearLayout>
