<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="@dimen/dp_5">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/headerTv"
                style="@style/HeadingText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/register_your_house"
                tools:text="Register your House" />

            <com.sillylife.plankhana.widgets.UIComponentCloseBtn
                android:id="@+id/closeBtn"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="end"
                android:visibility="invisible"
                app:setImageResource="@drawable/ic_close" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/stepProgressTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="@dimen/dp_15"
            android:fontFamily="@font/roboto_light"
            android:text="@string/step_1_of_2_generate_house_key"
            android:textColor="@color/sideTextColor" />

        <LinearLayout
            android:id="@+id/stepProgressLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_24">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="110dp"
                android:layout_height="@dimen/dp_6"
                app:srcCompat="@drawable/d_gradient_corner" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="110dp"
                android:layout_height="@dimen/dp_6"
                android:layout_marginStart="@dimen/dp_7"
                android:layout_marginLeft="@dimen/dp_7"
                app:srcCompat="@drawable/d_light_dark_corner" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/help"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="4dp"
                        android:visibility="gone" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/enter_your_house_key"
                        android:textColor="@color/textSubHeading"
                        android:textSize="12sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:padding="@dimen/dp_5"
                        android:text="@string/login_now"
                        android:textColor="@color/clickableTextColor"
                        android:textSize="12sp"
                        android:visibility="gone" />

                </LinearLayout>


                <com.sillylife.plankhana.widgets.xcardview.CardView
                    android:id="@+id/card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="6dp"
                    app:cardUseCompatPadding="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/d_input_field"
                        android:digits="abcdefghijklmnopqrstuvwxyz1234567890"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="Type Here"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:paddingLeft="15dp"
                        android:paddingTop="17dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="17dp"
                        android:textSize="14sp" />

                </com.sillylife.plankhana.widgets.xcardview.CardView>

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nextBtn"
                style="@style/ThemeButtonPrimary"
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/find" />

            <ProgressBar
                android:id="@+id/nextBtnProgress"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:theme="@style/ProgressWhiteTheme"
                android:visibility="gone" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/findOrRegisterBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/dp_20"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bottomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/don_t_have_a_house_key"
            android:textColor="@color/textHeading" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bottomSubtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_marginLeft="@dimen/dp_4"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/register"
            android:textColor="@color/clickableTextColor" />

    </LinearLayout>

</FrameLayout>
