<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bs_common"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="@dimen/dp_14"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/dialogTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/add_flatmate"
                android:textColor="@color/textHeading"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/closeBtn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:padding="@dimen/dp_10"
                app:srcCompat="@drawable/ic_close" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_14"
            android:layout_marginEnd="@dimen/dp_14"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.sillylife.plankhana.widgets.UIComponentInputFieldV2
                    android:id="@+id/input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:titleHint="@string/name" />

                <FrameLayout
                    android:id="@+id/changeImage"
                    android:layout_width="71dp"
                    android:layout_height="71dp"
                    android:layout_gravity="bottom"
                    android:layout_margin="6dp"
                    android:background="@drawable/d_circle_white">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/centerCameraIv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_add_photo" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/bgImageIv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />

                </FrameLayout>

            </LinearLayout>

            <com.sillylife.plankhana.widgets.UIComponentInputFieldV2
                android:id="@+id/inputPhone"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:titleHint="@string/phone_number" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_14"
            android:layout_marginBottom="@dimen/dp_20">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nextBtn"
                style="@style/ThemeButtonPrimary"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:letterSpacing="0"
                android:text="@string/add" />

            <ProgressBar
                android:id="@+id/nextBtnProgress"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:theme="@style/ProgressWhiteTheme"
                android:visibility="gone"
                tools:visibility="visible" />
        </FrameLayout>

    </LinearLayout>
</FrameLayout>