<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="@dimen/dp_5">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/headerTv"
                style="@style/HeadingText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/register_your_house"
                tools:text="Register your House" />

            <com.sillylife.plankhana.widgets.UIComponentCloseBtn
                android:id="@+id/closeBtn"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="end"
                android:visibility="invisible"
                app:setImageResource="@drawable/ic_close" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="@dimen/dp_15"
            android:fontFamily="@font/roboto_light"
            android:text="@string/step_2_of_2_add_bhaiyas"
            android:textColor="@color/sideTextColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_24">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="110dp"
                android:layout_height="@dimen/dp_6"
                app:srcCompat="@drawable/d_gradient_corner" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="110dp"
                android:layout_height="@dimen/dp_6"
                android:layout_marginStart="@dimen/dp_7"
                android:layout_marginLeft="@dimen/dp_7"
                app:srcCompat="@drawable/d_gradient_corner" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/zeroCaseLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_haunted_house" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_13"
                android:gravity="center"
                android:text="@string/your_house_has_got_no_n_one_but_ghosts"
                android:textColor="@color/textSubHeading" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addYourDetailsBtn"
                style="@style/ThemeButtonSecondary"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_24"
                android:letterSpacing="0"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:text="@string/add_your_details" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:visibility="gone"
            tools:listitem="@layout/item_add_bhaiya" />

    </FrameLayout>

    <include layout="@layout/layout_bottom_button" />

</LinearLayout>
