<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:elevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backArrowFl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_16"
                app:srcCompat="@drawable/ic_back" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:layout_marginRight="@dimen/dp_5"
                    app:srcCompat="@mipmap/ic_launcher" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/toolbarTitleTv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/textHeading"
                    android:textSize="@dimen/sp_16"
                    android:visibility="visible" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/userImageFl"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/userImageIv"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_user_placeholder" />

            </FrameLayout>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/leftArrowsIv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/dp_24"
            android:paddingLeft="@dimen/dp_24">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp_15"
                android:layout_height="@dimen/dp_15"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_left_arrows" />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/yesterdayTv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_10"
            android:text="@string/yesterday"
            android:textColor="@color/textSubHeading"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/todayTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_1"
            android:layout_weight="3"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/today"
            android:textColor="@color/textHeading"
            android:textSize="@dimen/sp_25" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tomorrowTv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical|end"
            android:paddingEnd="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:text="@string/tomorrow"
            android:textColor="@color/textSubHeading"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <FrameLayout
            android:id="@+id/rightArrowsIv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="@dimen/dp_24"
            android:paddingRight="@dimen/dp_24">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp_15"
                android:layout_height="@dimen/dp_15"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_right_arrows" />

        </FrameLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/subtextTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:text="@string/you_ll_get_to_eat_these_dishes_tonight"
        android:textColor="@color/textSubHeading" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/zeroCaseLl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_24"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.6"
                app:srcCompat="@drawable/ic_empty_dish_list" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/zeroCaseTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_13"
                android:gravity="center"
                android:text="@string/empty_dish_list"
                android:textColor="@color/textSubHeading" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            tools:listitem="@layout/item_home_dish" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/ProgressTheme"
            android:visibility="gone" />

    </FrameLayout>


</LinearLayout>
